完成部分功能js add/delete/checked list script ,修改部分css設定

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="./assests/js/script.js" defer></script>
 </head>
 
 <body>
@@ -25,15 +26,15 @@
         <div class="wrapper">
             <h3 class="title-wrapper">ToDo List</h3>
             <form class="input-wrapper" id="input-wrapper">
-                <input type="text" id="input">
+                <input type="text" id="input" placeholder="任務">
                 <button id="add-btn">Add</button>
                 <!-- <button id="more-btn">more</button> -->
             </form>
             <ul class="list" id="list">
-                <li><i class="fa-regular fa-square"></i>list<span class="delete"><i
-                            class="fa-solid fa-trash"></i></span></li>
-                <li class="checked"><i class="fa-solid fa-square-check"></i>list<span class="delete"><i
-                            class="fa-solid fa-trash"></i></span></li>
+                <!-- list li 範例 -->
+                <!-- <li>list<span class="delete"><i class="fa-solid fa-trash"></i></span></li>
+                <li class="checked">list<span class="delete"><i class="fa-solid fa-trash"></i></span></li> -->
+
             </ul>
         </div>
     </div>
