新增localstorae功能 Array.from().indexOf來排序list來更新list

--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@
                 <button id="add-btn">Add</button>
                 <!-- <button id="more-btn">more</button> -->
             </form>
-            <ul class="list" id="list">
-                <!-- list li 範例 -->
-                <!-- <li>list<span class="delete"><i class="fa-solid fa-trash"></i></span></li>
-                <li class="checked">list<span class="delete"><i class="fa-solid fa-trash"></i></span></li> -->
-
-            </ul>
+            <ul class="list" id="list"></ul>
         </div>
     </div>
 </body>
